# DonCEy_Kong_Jr

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  create-macos-apps-ultimate.sh  create-terminal-launchers.sh  create-windows-launchers.bat  create-windows-shortcuts.bat  diagnose-launcher.sh  run-launcher.bat  run-launcher.sh  run-server.bat  run-server.sh
build-ucrt64/.cmake/api/v1/reply/: cache-v2-2d149b3c38bb99fe8c27.json  cache-v2-ddfe5fe4a4c077325b43.json  cmakeFiles-v1-409ba08852e9b4f2d847.json  cmakeFiles-v1-fe31d7912fdd93f0259b.json  codemodel-v2-20bdde62a3d9acfb1f87.json  codemodel-v2-6485b4f817ed64d749d3.json  index-2025-11-09T06-14-06-0563.json  index-2025-11-10T02-35-52-0232.json  target-player-Debug-61a48415f3f88e986c86.json  target-player-Debug-fa8434c6f92527fbd7f8.json
client-C/UI/Game/: render.c  render.h
client-C/client-Player/: client-player0.c  clientPlayer  clientPlayer.c  clientPlayer.h  mainPlayer.c  net.h  netPOSIX.c  netWin32.c
clientC/UI/Game/: game.c  game.h  static_map.c  static_map.h
clientC/UI/Game/Logic/: collision.c  collision.h  constants.h  crocodile.c  crocodile.h  fruit.c  fruit.h  input.c  input.h  map.c  map.h  physics.c  physics.h  player.c  player.h
clientC/UI/Render/: render.c  render.h
clientC/UI/game/logic/: crocodile.h
clientC/UtilsC/: entities_tlv.c  entities_tlv.h  msg_types.h  proto.c  proto.h  tlv.h
clientC/clientPlayer/: clientPlayer  clientPlayer.c  clientPlayer.h  clientPlayerMain.c  net.h  netPOSIX.c  netWin32.c  proto.h  tempCodeRunnerFile.c
clientC/clientSpectator/: clientSpectator.c  clientSpectator.h  clientSpectatorMain.c
clientC/launcher/: launcher.c
server-java/: GameServer.java  adapter.java  server.java  tempCodeRunnerFile.java
server-java/Classes/: player.java
serverJava/Classes/Player/: player.java
serverJava/MessageManagement/: AnswerProcessor.java  Messenger.java  Proto.java  Session.java  TLVParser.java
serverJava/Messages/: EntityMessageFactory.java  OutboundMessage.java
serverJava/Messages/factories/: CrocodileFactory.java  FruitFactory.java
serverJava/Utils/: CrocVariant.java  FruitVariant.java  MsgType.java  Rect.java  TlvType.java
serverJava/serverJava/: ClientHandler.java  ClientRole.java  EntityState.java  GameObserver.java  GameServer.java  ServerGui.java
